--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,62 @@
     box-sizing: border-box;
 }
 
+html {
+    font-family: sans-serif;
+}
+
 body {
-    height: 100vh;
+    height: 100%;
+    background-color: #7FFFD4;
+}
+
+header {
+    height: 70px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cell {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cell:hover {
+    cursor: pointer;
+}
+
+.logo {
+    height: 30px;
+    color: black;
+}
+
+.logo:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+footer {
+    height: 50px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
 }
 
 .container {
     display: flex;
     height: 100%;
     background-color: #7FFFD4;
+    margin: 125px 0;
 }
 
 .grid {
