--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,19 @@ header {
     justify-content: space-between;
 }
 
+.play-btn {
+    text-decoration: none;
+    background-color: rgb(13, 135, 197);
+    color: white;
+    padding: .5rem 1rem;
+    border-radius: 10px;
+}
+
+.play-btn:hover {
+    background-color: rgb(21, 90, 125);
+
+}
+
 .cell {
     display: flex;
     justify-content: center;
@@ -53,6 +66,9 @@ footer {
     left: 0;
     right: 0;
     background-color: white;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
 }
 
 .container {
@@ -79,4 +95,8 @@ footer {
 
 .cell.active {
     background-color: rgb(13, 135, 197);
+}
+
+.fa-solid.fa-heart:hover {
+    color: red;
 }
